09-security/admission-controller.yml
apiVersion: admissionregistration.kus.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: pod-policy.example.com
webhooks:
  - name: pod-policy.example.com
    clientConfig:
      # url: https://external-server.example.com
      service:
        namespace: webhook-namespace
        name: webhook-service
      caBundle: "..."
    rules:
      - apiGroups: [ "" ]
        apiVersion: [ "v1" ]
        operations: [ "CREATE" ]
        resources: [ "pods" ]
        scope: "Namespaced"
